--- a/src/components/DadosPessoais/DadosPessoais.module.css
+++ b/src/components/DadosPessoais/DadosPessoais.module.css
@@ -1,4 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 .container {
-    width: 50%;
-    background-color: red;
+    position: relative;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    align-items: center;
+}
+
+.container fieldset {
+    font-weight: bolder;
+    width: 100%;
+    flex: 1;
+    padding: 0;
+    margin: 20px;
+    border: solid 2px rgba(0, 0, 0, 0.4);
+}
+
+.container input {
+    border: none;
+    box-sizing: border-box;
+    padding: 5px;
+    width: 100%;
+    font-size: 20px;
+}
+
+.container input:focus {
+    outline: none;
+
+    transition: all 0.2s;
 }
