--- a/src/components/DestinosDeInteresse/DestinosDeInteresse.module.css
+++ b/src/components/DestinosDeInteresse/DestinosDeInteresse.module.css
@@ -2,7 +2,7 @@
 
 .body {
     box-sizing: border-box;
-    width: 30%;
+    width: 40%;
     height: 100%;
     display: flex;
     align-self: center;
@@ -40,4 +40,11 @@
 
 .container select:focus {
     outline: none;
+}
+
+.square {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
 }
