--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+.main {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container {
-    background-color: #070F21;
+
     flex: 1;
     width: 100vw;
     display: flex;
     justify-content: space-evenly;
+}
+
+.containerButton {
+    display: flex;
+}
+
+.containerButton button {
+    padding: 10px;
+    width: 100px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    border: none;
+    background: rgb(85, 123, 246);
+    background: linear-gradient(45deg, rgba(85, 123, 246, 1) 0%, rgba(30, 68, 190, 1) 100%);
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    position: relative;
+    transition: all 0.2S ease-in;
+}
+
+button:hover {
+    transform: translateY(-10px);
+    cursor: pointer;
 }
